--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,9 @@ flutter:
 
 
   assets:
-    - images/zayn.jpeg
-  #   - images/a_dot_ham.jpeg
+    - assets/zayn.jpeg
+   # - assets/background.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
